@@ -1196,6 +1196,15 @@
 
     Sao.Window.CSV = Sao.class_(Object, {
         init: function(title) {
+            this.languages = Sao.rpc({
+                'method': 'model.ir.lang.search_read',
+                'params': [
+                    [['translatable', '=', true]],
+                    0, null, null, ['code', 'name'],
+                    {},
+                ],
+            }, this.session, false);
+
             this.dialog = new Sao.Dialog(title, 'csv', 'lg');
             this.el = this.dialog.modal;
 
@@ -1398,14 +1407,6 @@
             this.session = Sao.Session.current_session;
             this.fields_data = {}; // Ask before Removing this.
             this.fields_invert = {};
-            this.languages = Sao.rpc({
-                'method': 'model.ir.lang.search_read',
-                'params': [
-                    [['translatable', '=', true]],
-                    0, null, null, ['code', 'name'],
-                    {},
-                ],
-            }, this.session, false);
             Sao.Window.Import._super.init.call(this,
                 Sao.i18n.gettext('CSV Import: %1', name));
 
@@ -1983,8 +1984,25 @@
                     this.fields[path] = node;
 
                     // Insert relation only to real field
-                    if (item.name.indexOf('.') == -1 && item.field.relation) {
-                        node.children = {};
+                    if (item.name.indexOf('.') == -1) {
+                        if (item.field.relation) {
+                            node.children = {};
+                        } else if (item.field.translate) {
+                            node.children = {};
+                            for (const language of this.languages) {
+                                const l_path = `${path}:lang=${language.code}`;
+                                const l_string = (
+                                    `${long_string} (${language.name})`);
+                                const l_node = {
+                                    path: l_path,
+                                    string: language.name,
+                                    long_string: l_string,
+                                    relation: null,
+                                };
+                                node.children[language.code] = l_node;
+                                this.fields[l_path] = l_node;
+                            }
+                        }
                     }
                 }
             }
