@@ -1,3 +1,4 @@
+* Support language suffix in CSV export
 * Close tab with mouse middle click
 * Support language suffix in CSV import
 
